[project]
name = "reportlabx"
version = "1.0.0"
description = "Library that extends ReportLabs capabilities"
authors = [{ name = "Justus Röderer", email = "mail@dateiexplorer.de" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reportlab >= 4.0.7",
    "svglib >= 1.5.1",
    "matplotlib >= 3.8.2",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
